Authentication using Discord OAuth - WIP
